fixing whiteboard z-index

--- a/app/styles/02-components/01-modules/_map.styl
+++ b/app/styles/02-components/01-modules/_map.styl
@@ -34,7 +34,7 @@
   perspective 1500
   top: 835px
   left: 1620px
-  z-index: 9999
+  z-index: 835
   canvas
     transform: rotateX(54deg)
     width: 113px
